<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                android:textColor="#000000"
                android:text="@string/time_now">
            </TextView>

            <TextClock
                android:id="@+id/simpleDigitalClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp">
        </Space>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:padding="10dp"
            android:textColor="#000000"
            android:text="@string/select_test">
        </TextView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp">
        </Space>

        <Button
            android:id="@+id/TUG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:drawableStart="@drawable/ic_line_chart"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="26dp"
            android:textColor="@color/white"
            android:background="@drawable/button_signin"
            android:text="@string/tug" />

        <Button
            android:id="@+id/Balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:drawableStart="@drawable/ic_line_chart"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="26dp"
            android:textColor="@color/white"
            android:background="@drawable/button_signin"
            android:text="@string/Balance" />

        <Button
            android:id="@+id/free_Walking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:drawableStart="@drawable/ic_line_chart"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="26dp"
            android:textColor="@color/white"
            android:background="@drawable/button_signin"
            android:text="@string/free_walking" />

    </LinearLayout>

</ScrollView>